Fix horizontal scrollbars showing in Chrome 30.0.1599
pic: http://s12.postimg.org/mtyua4n0d/nodezoo.png

--- a/site/public/css/app.css
+++ b/site/public/css/app.css
@@ -125,9 +125,7 @@ div.main {
 }
 
 #query_form {
-
-    padding-left: 16%;
-    padding-right: 16%;
+    text-align: center;
     min-width: 960px;
     overflow: auto;
 	height: 49px;
